--- a/language/EN.json
+++ b/language/EN.json
@@ -129,8 +129,8 @@
             "NOT_SET_GOODBYE": "*You didn't set a goodbye message!*\n*To set:* ```.goodbye bye && bye#see ya \n to add member mention use {mention} \n to add  group description in welcome message use {gpdesc} \n to add group name use {gphead} \n to add group maker name use {gpmaker} \n to add bot name use {owner} \n to add exact indian time use {time} ```",
             "GOODBYE_ALREADY_SETTED": "*✅ Goodbye message has been set!*\n*Message:* ```",
             "NEED_GOODBYE_TEXT": "*You must write a message to set up the goodbye message.*\n*Example:* ```.goodbye bye && bye#see ya```",
-            "GOODBYE_DELETED": "*✅ Goodbye message has been deleted successfully!*",
-        
+            "GOODBYE_DELETED": "*✅ Goodbye message has been deleted successfully!*"
+        },
         "lydia": {
             "ADDLYDIA_DESC": "Activates Lydia (AI) for the user.",
             "NEED_REPLY": "```Please respond to a user's message!```",
